--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build && touch ./build/.nojekyll && echo \"gambiconf.dev\" > ./build/CNAME",
     "build:prod": "export ENV=production && npm run build && cp build/index.html build/404.html",
     "build:staging": "export ENV=staging && npm run build && cp build/index.html build/404.html",
-    "deploy:prod": "gh-pages --repo git@github.com:gambiconf/gambiconf.github.io.git -d build -t true",
+"deploy:prod": "gh-pages --repo git@github.com:gambiconf/2023.git -d build -t true",
     "deploy:staging": "gh-pages --repo git@github.com:gambiconf/website-staging.git -d build -t true",
     "preview": "vite preview",
     "test": "playwright test",
