--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": true,
-  },
+    "strictNullChecks": true
+  }
 }
